fix map overlapping, widget resize, color use

--- a/src/pages/Tools/EnterpriseProcessModeler/OrchestrationStudio/Flow/index.css
+++ b/src/pages/Tools/EnterpriseProcessModeler/OrchestrationStudio/Flow/index.css
@@ -42,15 +42,15 @@ body {
   cursor: grab;
 }
 
-.dndflow .dndnode.start {
-  border-color: #00e723;
+/* .dndflow .dndnode.start {
+  border-color: #e3ebef;
   background-color: #00e723;
 }
 
 .dndflow .dndnode.stop {
   border-color: #ff0000;
   background-color: #ff0000;
-}
+} */
 
 .dndflow .reactflow-wrapper {
   flex-grow: 1;
